--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
-    <head>崔晓莹</head>
-    <h1>Hello word</h1>
+    <head>
+        <mate charset="utf-8">
+        <title>崔晓莹的个人主页</title>
+    </head>
+    <h1>我是崔晓莹/h1>
 </html>
