--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
 <div id="content"> 
     <section> 
-        <h1>如何生活</h1> 
+        <h1>生活</h1> 
         <p> 让我们如大自然般悠然自在地生活一天吧，别因为有坚果外壳或者蚊子翅膀落在铁轨上而翻车。
         </p> 
 
         <p>让我们该起床时就赶紧起来，该休息时就安心休息，保持安静而没有烦扰的心态；
         </p> 
 
-        <p>身边的人要来就让他来，要他去就让他去，让钟声回荡，让还在哭喊----下决心好好地过一天吧。
+        <p>身边的人要来就让他来，要他去就让他去，让钟声回荡，让孩子哭喊----下决心好好地过一天吧。
         </p> 
 
 
