自我介绍页面

--- a/introduction.html
+++ b/introduction.html
@@ -1,7 +1,7 @@
 <!doctype html> 
 <html> 
 <head> 
-<title>个人主页</title> 
+<title>自我介绍</title> 
 <link href="style.css" rel="stylesheet"  type="text/css" /> 
 
 
@@ -13,18 +13,6 @@
         青鸟 <span class="orange"> 的BLOG </span> 
   </h1> 
 </header> 
-
-
-<nav> 
-      <ul> 
-        <li><a href="index.html" class="selected">博客首页 </a> </li> 
-        <li><a href="introduction.html">给我留言 </a></li> 
-        <li><a href="index3.html">友情链接 </a></li> 
-        <li><a href="index4.html">我的信箱 </a></li> 
-        <li><a href="index5.html">社区 </a></li> 
-      </ul> 
-</nav>  
-
 
 
 
